--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,34 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-	
-  <head>
-    <title>Memory Game</title>
-  </head>
-  
-    <nav class="clearfix">
-      <a href="#">Instructions</a>
-      <a href="#">Game</a>
-    </nav>
-    
-    <body>
-    	<h1>Memory Game</h1>
-    	<h2>Instructions</h2>
-    	<p>
-    		Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso or simply Pairs, is a card game in which all of the cards are laid face down on a surface and two cards are         flipped face up over each turn. The object of the game is to turn over pairs of matching cards.
-    	</p>
-    	
-    	<div class="board">
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-		<div class="card"></div>
-  	</div>
-  
-  	<footer>
-  		Created with &hearts; by <span class="name">GA</span>
-	</footer>
-
-     </body>
-
-
+<html>
+<head>
+<title>Simple Memory Game</title>
+<link rel="stylesheet" href="style.css" type="text/css">
+</head>
+<body>
+  <nav class="clearfix">
+    <a href="#instructions">Instructions</a>
+    <a href="#game">Game</a>
+  </nav>
+<h1>Memory Game</h1>
+<h2 id="instructions">Instructions</h2>
+<p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso, or Pairs, is a card game in which all of the cards are laid facedown on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
+<div class="board" id="game">
+  <div class="cards"></div>
+  <div class="cards"></div>
+  <div class="cards"></div>
+  <div class="cards"></div>
+</div>
+<footer>Created with love by <span>Dax</span></footer>
+<script src="main.js"></script>
+</body>
 </html>
