--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -6,17 +6,17 @@
 </head>
 <body>
   <nav class="clearfix">
-    <a href="#instructions">Instructions</a>
-    <a href="#game">Game</a>
+    <a href="#">Instructions</a>
+    <a href="#">Game</a>
   </nav>
 <h1>Memory Game</h1>
-<h2 id="instructions">Instructions</h2>
+<h2>Instructions</h2>
 <p>Concentration, also known as Match Match, Memory, Pelmanism, Shinkei-suijaku, Pexeso, or Pairs, is a card game in which all of the cards are laid facedown on a surface and two cards are flipped face up over each turn. The object of the game is to turn over pairs of matching cards.</p>
-<div class="board" id="game">
+<div class="board" id="game-board">
+  <!-- <div class="cards"></div>
   <div class="cards"></div>
   <div class="cards"></div>
-  <div class="cards"></div>
-  <div class="cards"></div>
+  <div class="cards"></div> -->
 </div>
 <footer>Created with love by <span>Dax</span></footer>
 <script src="main.js"></script>
